# src/apis/query/api.go
@@ -81,3 +81,55 @@ func GetPriceStatistics(c *fiber.Ctx) error {
 	}
 	return c.JSON(res)
 }
+
+// GetPersonalSummary @GetPersonalSummary
+// @Router /api/annual/summary [get]
+// @Summary Get personal annual summary
+// @Description Get personal annual summary
+// @Tags Query
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.SummaryResponse
+// @Failure 400 {object} common.HttpError
+// @Failure 403 {object} common.HttpError
+// @param Authorization header string true "Bearer和token空格拼接"
+func GetPersonalSummary(c *fiber.Ctx) error {
+	tmpUser, err := GetGeneralUser(c)
+	if err != nil {
+		return err
+	}
+	if tmpUser == nil || tmpUser.UserType != "user" {
+		return common.Forbidden("Only user can get personal annul summary")
+	}
+	res, err := GetAnnualSummary(tmpUser.ID)
+	if err != nil {
+		return err
+	}
+	return c.JSON(res)
+}
+
+// GetAllSummary @GetAllSummary
+// @Router /api/annual/summary/all [get]
+// @Summary Get all annual summary
+// @Description Get all annual summary
+// @Tags Query
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.SummaryResponse
+// @Failure 400 {object} common.HttpError
+// @Failure 403 {object} common.HttpError
+// @param Authorization header string true "Bearer和token空格拼接"
+func GetAllSummary(c *fiber.Ctx) error {
+	tmpUser, err := GetGeneralUser(c)
+	if err != nil {
+		return err
+	}
+	if tmpUser == nil || tmpUser.UserType != "admin" {
+		return common.Forbidden("Only admin can get all annul summary")
+	}
+	res, err := GetAnnualSummary(-1)
+	if err != nil {
+		return err
+	}
+	return c.JSON(res)
+}
