# src/models/statisticsSchemas.go
@@ -18,3 +18,17 @@ type PriceStatisticsResponse struct {
 //type PriceStatisticsResponseCurrent struct {
 //	CommodityItem *CommodityItem
 //}
+
+type SummaryResponse struct {
+	Seller         Seller
+	SellerNum      int `json:"seller_num"`
+	Commodity      Commodity
+	CommodityNum   int `json:"commodity_num"`
+	Platform       Platform
+	PlatformNum    int    `json:"platform_num"`
+	Category       string `json:"category"`
+	CategoryNum    int    `json:"category_num"`
+	FavoriteNum    int    `json:"favorite_num"`
+	MessageNum     int    `json:"message_num"`
+	PriceChangeNum int    `json:"price_change_num"`
+}
